--- a/src/app/steambanner/steambanner.component.scss
+++ b/src/app/steambanner/steambanner.component.scss
@@ -4,7 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
     height: 310px;
     margin-right: auto;
     margin-left: auto;
@@ -19,6 +18,7 @@
         align-items: center;
         justify-content: space-around;
         z-index: 1;
+        padding-left:20px;
     
         h2{
             color: $lightbg;
